some fixes and updates

--- a/JobSearching-Frontend/src/app/add-job/add-job.component.html
+++ b/JobSearching-Frontend/src/app/add-job/add-job.component.html
@@ -63,10 +63,10 @@
                                     <label for="" class="label-control">Location</label>
                                 </div>
                                 <div class="input-group">
-                                    <small class="input-group-addon me-1">Latitude</small>
-                                    <input type="text" class="form-control" formControlName="latitude" />
-                                    <small class="input-group-addon mx-1">Longitude</small>
-                                    <input type="text" class="form-control" formControlName="longitude" />
+                                    <small class="input-group-addon me-1">Address</small>
+                                    <input type="text" class="form-control" formControlName="address" />
+                                    <small class="input-group-addon mx-1">Lng and lat</small>
+                                    <input type="text" class="form-control" formControlName="coordinates" placeholder="Comma separated Lng and lat"/>
                                 </div>
                             </div>
                         </div>
