--- a/JobSearching-Frontend/src/app/edit-job/edit-job.component.html
+++ b/JobSearching-Frontend/src/app/edit-job/edit-job.component.html
@@ -63,16 +63,16 @@
                                     <label for="" class="label-control">Location</label>
                                 </div>
                                 <div class="input-group">
-                                    <small class="input-group-addon me-1">Latitude</small>
-                                    <input type="text" class="form-control" formControlName="latitude" />
-                                    <small class="input-group-addon mx-1">Longitude</small>
-                                    <input type="text" class="form-control" formControlName="longitude" />
+                                    <small class="input-group-addon me-1">Address</small>
+                                    <input type="text" class="form-control" formControlName="address" placeholder="Address" />
+                                    <small class="input-group-addon mx-1">Lng and lat</small>
+                                    <input type="text" class="form-control" formControlName="coordinates" placeholder="Comma separated Lng and lat"/>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="card-footer">
-                        <button class="btn btn-primary btn-xs float-end">Submit</button>
+                        <button class="btn btn-primary btn-xs float-end">Update</button>
                     </div>
                 </div>
             </form>
